# analog-playground

./: .gitignore  CMakeLists.txt  README.md
audio-engine/: AudioGraph.cpp  AudioGraph.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Jack.h  Log.cpp  Log.h  Module.cpp  Module.h  README.md  Wav.h  test.cpp
cli/: CMakeLists.txt  main.cpp
